Fix Z-index up button

--- a/src/styles/blocks/_up-button.scss
+++ b/src/styles/blocks/_up-button.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 30px;
   right: 30px;
+  z-index: 10;
 
   display: block;
   width: 40px;
@@ -34,4 +35,8 @@
   &__icon-symbol {
     fill: url('#gradient-vertical');
   }
+}
+
+body.has-dialog .up-button {
+  display: none;
 }
